--- a/app/src/main/res/layout/activity_register_premium.xml
+++ b/app/src/main/res/layout/activity_register_premium.xml
@@ -21,46 +21,128 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Chọn phương thức thanh toán"
+            android:text="Nâng cấp Premium"
             android:textAlignment="center"
             android:textSize="24dp"
             android:textStyle="bold"
             android:paddingVertical="8dp"/>
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_marginTop="180dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/zaloimg"
-            android:scaleType="centerCrop"
-            android:id="@+id/imageZalo"
-            app:riv_corner_radius="8dp"/>
-
-        <ImageView
-            android:id="@+id/icon_checked"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@id/imageZalo"
-            android:layout_alignEnd="@id/imageZalo"
-            android:layout_marginTop="-100dp"
-            android:src="@drawable/baseline_check_24"
-            android:visibility="gone"/>
-
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/buttonPay"
-        app:backgroundTint="@null"
-        android:layout_marginTop="10dp"
-        android:text="Thanh toán"
-        android:background="@drawable/custom_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:enabled="false"/>
+        android:orientation="vertical"
+        android:layout_marginTop="180dp"
+        android:paddingHorizontal="16dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Chọn phương thức thanh toán"
+            android:textSize="24dp"
+            android:layout_marginBottom="36dp"
+            android:textAlignment="center"
+            android:textStyle="bold"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:id="@+id/buttonPay2"
+            android:layout_marginBottom="24dp">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/momo_img"
+                android:scaleType="centerCrop"
+                android:id="@+id/imageMoMo"
+                app:riv_corner_radius="8dp"
+                android:layout_marginRight="16dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thanh toán bằng MoMo"
+                android:textSize="18dp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:id="@+id/buttonPay3"
+            android:layout_marginBottom="24dp">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/vnpay_img"
+                android:scaleType="centerCrop"
+                android:id="@+id/imageVNPay"
+                app:riv_corner_radius="8dp"
+                android:layout_marginRight="16dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thanh toán bằng Vn Pay"
+                android:textSize="18dp"
+                />
+        </LinearLayout>
+        <!--    <RelativeLayout-->
+        <!--        android:layout_marginTop="180dp"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="wrap_content">-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:id="@+id/buttonPay1">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/zaloimg"
+                android:scaleType="centerCrop"
+                android:id="@+id/imageZalo"
+                app:riv_corner_radius="8dp"
+                android:layout_marginRight="16dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Thanh toán bằng Zalo Pay"
+                android:textSize="18dp"
+                />
+        </LinearLayout>
+
+        <!--        <ImageView-->
+        <!--            android:id="@+id/icon_checked"-->
+        <!--            android:layout_width="100dp"-->
+        <!--            android:layout_height="100dp"-->
+        <!--            android:layout_below="@id/imageZalo"-->
+        <!--            android:layout_alignEnd="@id/imageZalo"-->
+        <!--            android:layout_marginTop="-100dp"-->
+        <!--            android:src="@drawable/baseline_check_24"-->
+        <!--            android:visibility="gone"/>-->
+
+        <!--    </RelativeLayout>-->
+
+        <!--    <Button-->
+        <!--        android:id="@+id/buttonPay"-->
+        <!--        app:backgroundTint="@null"-->
+        <!--        android:layout_marginTop="10dp"-->
+        <!--        android:text="Thanh toán"-->
+        <!--        android:textColor="@color/white"-->
+        <!--        android:background="@drawable/custom_button"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:enabled="false"/>-->
+    </LinearLayout>
 
 </LinearLayout>
