--- a/app/src/main/res/layout/activity_playmusic.xml
+++ b/app/src/main/res/layout/activity_playmusic.xml
@@ -23,70 +23,73 @@
         />
     
     <ImageView
-        android:layout_width="240dp"
-        android:layout_height="240dp"
         android:id="@+id/music_icon_big"
-        android:layout_centerHorizontal="true"
-        android:padding="20dp"
+        android:layout_width="267dp"
+        android:layout_height="257dp"
         android:layout_above="@id/controls"
-        android:src="@drawable/music_icon_big"/>
+        android:layout_centerHorizontal="true"
+        android:padding="1dp"
+        android:src="@drawable/music_icon_big" />
     
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:id="@+id/controls"
+        android:layout_width="match_parent"
+        android:layout_height="357dp"
+        android:layout_alignParentBottom="true"
         android:padding="40dp">
         
         <SeekBar
+            android:id="@+id/seek_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/seek_bar"
             android:layout_margin="10dp"
-            android:backgroundTint="@color/white"/>
+            android:backgroundTint="@color/white" />
         
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/current_time"
-            android:layout_below="@id/seek_bar"
-            android:text="0:00"
-            android:layout_alignParentStart="true"
-            android:textColor="@color/white"
-            android:layout_margin="20dp"/>
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/seek_bar"
-            android:id="@+id/total_time"
+            android:layout_alignParentStart="true"
+            android:layout_margin="20dp"
             android:text="0:00"
+            android:textColor="@color/white" />
+        
+        <TextView
+            android:id="@+id/total_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/seek_bar"
             android:layout_alignParentEnd="true"
-            android:textColor="@color/white"
-            android:layout_margin="20dp"/>
+            android:layout_margin="20dp"
+            android:text="0:00"
+            android:textColor="@color/white" />
         
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/total_time"
-            android:padding="20dp"
+            android:gravity="center"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:padding="20dp">
             
             <ImageView
+                android:id="@+id/previous"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_skip_previous_24"
-                android:id="@+id/previous"/>
+                android:src="@drawable/ic_baseline_skip_previous_24" />
+            
             <ImageView
+                android:id="@+id/pause_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_pause_circle_outline_24"
-                android:id="@+id/pause_play"/>
+                android:src="@drawable/ic_baseline_pause_circle_outline_24" />
+            
             <ImageView
+                android:id="@+id/next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_skip_next_24"
-                android:id="@+id/next"/>
+                android:src="@drawable/ic_baseline_skip_next_24" />
         
         </LinearLayout>
     
