--- a/app/src/main/res/layout/activity_update_infomation.xml
+++ b/app/src/main/res/layout/activity_update_infomation.xml
@@ -43,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:inputType="text"
             android:hint="Full name"
             android:padding="10dp" />
 
