--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -33,6 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:textColor="@android:color/black"
+                android:inputType="text"
                 android:hint="Tìm kiếm"
                 android:textColorHint="@color/colorTextHint"
                 android:background="@android:color/transparent"
